// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button with icon 1`] = `
<div>
  <button
    aria-label="I have an icon!"
    type="button"
  >
    <p>
       label
    </p>
  </button>
</div>
`;

exports[`Button renders correctly 1`] = `
<div>
  <button
    aria-label="I am a button."
    type="button"
  >
    <p>
       label
    </p>
  </button>
</div>
`;
